# leaffliction

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  signature.txt
artifacts/plots/: distribution.csv
docs/: architecture.md  training.md
docs/cli/: augmentation.md  distribution.md  prediction.md  split.md  training.md
srcs/cli/: Augmentation.py  Distribution.py  Transformation.py  _path_bootstrap.py  predict.py  split.py  train.py
srcs/cli/filters/: analyze.py  blur.py  brown.py  hist.py  landmarks.py  mask.py  roi.py
srcs/dataio/: manifest.py  sequence.py  transforms.py
srcs/model/: cnn.py
srcs/predict/: evaluation.py  image_processor.py  model_loader.py  prediction_visualizer.py  predictor.py
srcs/preprocessing/: balance_dataset.py  class_balancer.py  dataset_balancer.py  dataset_components.py  image_augmenter.py  transformations.py
srcs/train/: utils.py
srcs/transform/: config.yaml
srcs/transform/filters/: README.md  __init__.py  analyze.py  blur.py  brown.py  hist.py  landmarks.py  mask.py  roi.py
srcs/transforms/: pipeline_transform.py
srcs/utils/: __init__.py  common.py  confusion_matrix.py  generate_signature.py  image_utils.py  mask_utils.py  metrics.py  system_info.py  visualization_utils.py
transform/: config.yaml
